// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PropertyRow renders at-risk 1`] = `
<div
  className="panel panel--default property-row"
>
  <div
    className="property-row__selector"
    onClick={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    <div
      className="property-row__image"
      style={
        Object {
          "backgroundImage": "url(\\"https://i.imgur.com/UEH4gfU.jpg\\")",
        }
      }
    />
    <div
      className="property-row__selector-hover"
    />
    <div
      className="property-row__tick"
    />
  </div>
  <div
    className="property-row__name"
  >
    Meridian SLC
  </div>
  <div
    className="property-row__address"
  >
    123 4th Avenue, Seattle WA 98106
  </div>
  <div
    className="property-row__link-container"
  >
    <a
      className="property-row__link"
      href="https://app.remarkably.io/projects/pro_nqcu73oiinomuvn7/baseline/"
    >
      View Property
    </a>
  </div>
  <div
    className="property-row__health"
  >
    <div
      className="property-status property-status--at-risk"
    >
      AT RISK
    </div>
  </div>
  <div
    className="property-row__members"
  >
    <div
      className="user-icon-list"
    >
      <div
        className="user-icon user-icon-list__icon"
        data-index={0}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        style={
          Object {
            "backgroundColor": "#006EFF",
            "zIndex": 4,
          }
        }
      >
        IK
        <div
          className="user-icon__avatar"
          style={
            Object {
              "backgroundImage": "url()",
            }
          }
        />
      </div>
      <div
        className="user-icon user-icon-list__icon"
        data-index={1}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        style={
          Object {
            "backgroundColor": "#6B29BE",
            "zIndex": 3,
          }
        }
      >
        PN
        <div
          className="user-icon__avatar"
          style={
            Object {
              "backgroundImage": "url(/avatar.jpg)",
            }
          }
        />
      </div>
      <div
        className="user-icon user-icon-list__icon"
        data-index={2}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        style={
          Object {
            "backgroundColor": "#006EFF",
            "zIndex": 2,
          }
        }
      >
        DC
        <div
          className="user-icon__avatar"
          style={
            Object {
              "backgroundImage": "url(https://robohash.org/architectoaccusantiumdolorem.jpg?size=50x50&set=set1&bgset=bg1)",
            }
          }
        />
      </div>
      <div
        className="user-icon user-icon-list__icon"
        data-index={3}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        style={
          Object {
            "backgroundColor": "#6B29BE",
            "zIndex": 1,
          }
        }
      >
        UA
        <div
          className="user-icon__avatar"
          style={
            Object {
              "backgroundImage": "url(https://robohash.org/estnecessitatibusporro.jpg?size=50x50&set=set1&bgset=bg1)",
            }
          }
        />
      </div>
      <div
        className="user-icon user-icon-list__icon"
        data-index={4}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        style={
          Object {
            "backgroundColor": "#006EFF",
            "zIndex": 0,
          }
        }
      >
        SC
        <div
          className="user-icon__avatar"
          style={
            Object {
              "backgroundImage": "url(https://robohash.org/esseconsequaturconsequatur.jpg?size=50x50&set=set1&bgset=bg1)",
            }
          }
        />
      </div>
      <div
        className="user-icon-list__count"
      >
        <span>
          +
          10
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`PropertyRow renders off-track 1`] = `
<div
  className="panel panel--default property-row"
>
  <div
    className="property-row__selector"
    onClick={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    <div
      className="property-row__image"
      style={
        Object {
          "backgroundImage": "url(\\"https://i.imgur.com/UEH4gfU.jpg\\")",
        }
      }
    />
    <div
      className="property-row__selector-hover"
    />
    <div
      className="property-row__tick"
    />
  </div>
  <div
    className="property-row__name"
  >
    Meridian SLC
  </div>
  <div
    className="property-row__address"
  >
    123 4th Avenue, Seattle WA 98106
  </div>
  <div
    className="property-row__link-container"
  >
    <a
      className="property-row__link"
      href="https://app.remarkably.io/projects/pro_nqcu73oiinomuvn7/baseline/"
    >
      View Property
    </a>
  </div>
  <div
    className="property-row__health"
  >
    <div
      className="property-status property-status--off-track"
    >
      OFF TRACK
    </div>
  </div>
  <div
    className="property-row__members"
  >
    <div
      className="user-icon-list"
    >
      <div
        className="user-icon user-icon-list__icon"
        data-index={0}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        style={
          Object {
            "backgroundColor": "#006EFF",
            "zIndex": 4,
          }
        }
      >
        IK
        <div
          className="user-icon__avatar"
          style={
            Object {
              "backgroundImage": "url()",
            }
          }
        />
      </div>
      <div
        className="user-icon user-icon-list__icon"
        data-index={1}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        style={
          Object {
            "backgroundColor": "#6B29BE",
            "zIndex": 3,
          }
        }
      >
        PN
        <div
          className="user-icon__avatar"
          style={
            Object {
              "backgroundImage": "url(/avatar.jpg)",
            }
          }
        />
      </div>
      <div
        className="user-icon user-icon-list__icon"
        data-index={2}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        style={
          Object {
            "backgroundColor": "#006EFF",
            "zIndex": 2,
          }
        }
      >
        DC
        <div
          className="user-icon__avatar"
          style={
            Object {
              "backgroundImage": "url(https://robohash.org/architectoaccusantiumdolorem.jpg?size=50x50&set=set1&bgset=bg1)",
            }
          }
        />
      </div>
      <div
        className="user-icon user-icon-list__icon"
        data-index={3}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        style={
          Object {
            "backgroundColor": "#6B29BE",
            "zIndex": 1,
          }
        }
      >
        UA
        <div
          className="user-icon__avatar"
          style={
            Object {
              "backgroundImage": "url(https://robohash.org/estnecessitatibusporro.jpg?size=50x50&set=set1&bgset=bg1)",
            }
          }
        />
      </div>
      <div
        className="user-icon user-icon-list__icon"
        data-index={4}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        style={
          Object {
            "backgroundColor": "#006EFF",
            "zIndex": 0,
          }
        }
      >
        SC
        <div
          className="user-icon__avatar"
          style={
            Object {
              "backgroundImage": "url(https://robohash.org/esseconsequaturconsequatur.jpg?size=50x50&set=set1&bgset=bg1)",
            }
          }
        />
      </div>
      <div
        className="user-icon-list__count"
      >
        <span>
          +
          10
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`PropertyRow renders on-track 1`] = `
<div
  className="panel panel--default property-row"
>
  <div
    className="property-row__selector"
    onClick={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    <div
      className="property-row__image"
      style={
        Object {
          "backgroundImage": "url(\\"https://i.imgur.com/UEH4gfU.jpg\\")",
        }
      }
    />
    <div
      className="property-row__selector-hover"
    />
    <div
      className="property-row__tick"
    />
  </div>
  <div
    className="property-row__name"
  >
    Meridian SLC
  </div>
  <div
    className="property-row__address"
  >
    123 4th Avenue, Seattle WA 98106
  </div>
  <div
    className="property-row__link-container"
  >
    <a
      className="property-row__link"
      href="https://app.remarkably.io/projects/pro_nqcu73oiinomuvn7/baseline/"
    >
      View Property
    </a>
  </div>
  <div
    className="property-row__health"
  >
    <div
      className="property-status property-status--on-track"
    >
      ON TRACK
    </div>
  </div>
  <div
    className="property-row__members"
  >
    <div
      className="user-icon-list"
    >
      <div
        className="user-icon user-icon-list__icon"
        data-index={0}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        style={
          Object {
            "backgroundColor": "#006EFF",
            "zIndex": 4,
          }
        }
      >
        IK
        <div
          className="user-icon__avatar"
          style={
            Object {
              "backgroundImage": "url()",
            }
          }
        />
      </div>
      <div
        className="user-icon user-icon-list__icon"
        data-index={1}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        style={
          Object {
            "backgroundColor": "#6B29BE",
            "zIndex": 3,
          }
        }
      >
        PN
        <div
          className="user-icon__avatar"
          style={
            Object {
              "backgroundImage": "url(/avatar.jpg)",
            }
          }
        />
      </div>
      <div
        className="user-icon user-icon-list__icon"
        data-index={2}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        style={
          Object {
            "backgroundColor": "#006EFF",
            "zIndex": 2,
          }
        }
      >
        DC
        <div
          className="user-icon__avatar"
          style={
            Object {
              "backgroundImage": "url(https://robohash.org/architectoaccusantiumdolorem.jpg?size=50x50&set=set1&bgset=bg1)",
            }
          }
        />
      </div>
      <div
        className="user-icon user-icon-list__icon"
        data-index={3}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        style={
          Object {
            "backgroundColor": "#6B29BE",
            "zIndex": 1,
          }
        }
      >
        UA
        <div
          className="user-icon__avatar"
          style={
            Object {
              "backgroundImage": "url(https://robohash.org/estnecessitatibusporro.jpg?size=50x50&set=set1&bgset=bg1)",
            }
          }
        />
      </div>
      <div
        className="user-icon user-icon-list__icon"
        data-index={4}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        style={
          Object {
            "backgroundColor": "#006EFF",
            "zIndex": 0,
          }
        }
      >
        SC
        <div
          className="user-icon__avatar"
          style={
            Object {
              "backgroundImage": "url(https://robohash.org/esseconsequaturconsequatur.jpg?size=50x50&set=set1&bgset=bg1)",
            }
          }
        />
      </div>
      <div
        className="user-icon-list__count"
      >
        <span>
          +
          10
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`PropertyRow renders selected 1`] = `
<div
  className="panel panel--default property-row property-row--selection-mode property-row--selected"
>
  <div
    className="property-row__selector"
    onClick={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    <div
      className="property-row__image"
      style={
        Object {
          "backgroundImage": "url(\\"https://i.imgur.com/UEH4gfU.jpg\\")",
        }
      }
    />
    <div
      className="property-row__selector-hover"
    />
    <div
      className="property-row__tick"
    />
  </div>
  <div
    className="property-row__name"
  >
    Meridian SLC
  </div>
  <div
    className="property-row__address"
  >
    123 4th Avenue, Seattle WA 98106
  </div>
  <div
    className="property-row__link-container"
  >
    <a
      className="property-row__link"
      href="https://app.remarkably.io/projects/pro_nqcu73oiinomuvn7/baseline/"
    >
      View Property
    </a>
  </div>
  <div
    className="property-row__health"
  >
    <div
      className="property-status property-status--on-track"
    >
      ON TRACK
    </div>
  </div>
  <div
    className="property-row__members"
  >
    <div
      className="user-icon-list"
    >
      <div
        className="user-icon user-icon-list__icon"
        data-index={0}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        style={
          Object {
            "backgroundColor": "#006EFF",
            "zIndex": 4,
          }
        }
      >
        IK
        <div
          className="user-icon__avatar"
          style={
            Object {
              "backgroundImage": "url()",
            }
          }
        />
      </div>
      <div
        className="user-icon user-icon-list__icon"
        data-index={1}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        style={
          Object {
            "backgroundColor": "#6B29BE",
            "zIndex": 3,
          }
        }
      >
        PN
        <div
          className="user-icon__avatar"
          style={
            Object {
              "backgroundImage": "url(/avatar.jpg)",
            }
          }
        />
      </div>
      <div
        className="user-icon user-icon-list__icon"
        data-index={2}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        style={
          Object {
            "backgroundColor": "#006EFF",
            "zIndex": 2,
          }
        }
      >
        DC
        <div
          className="user-icon__avatar"
          style={
            Object {
              "backgroundImage": "url(https://robohash.org/architectoaccusantiumdolorem.jpg?size=50x50&set=set1&bgset=bg1)",
            }
          }
        />
      </div>
      <div
        className="user-icon user-icon-list__icon"
        data-index={3}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        style={
          Object {
            "backgroundColor": "#6B29BE",
            "zIndex": 1,
          }
        }
      >
        UA
        <div
          className="user-icon__avatar"
          style={
            Object {
              "backgroundImage": "url(https://robohash.org/estnecessitatibusporro.jpg?size=50x50&set=set1&bgset=bg1)",
            }
          }
        />
      </div>
      <div
        className="user-icon user-icon-list__icon"
        data-index={4}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        style={
          Object {
            "backgroundColor": "#006EFF",
            "zIndex": 0,
          }
        }
      >
        SC
        <div
          className="user-icon__avatar"
          style={
            Object {
              "backgroundImage": "url(https://robohash.org/esseconsequaturconsequatur.jpg?size=50x50&set=set1&bgset=bg1)",
            }
          }
        />
      </div>
      <div
        className="user-icon-list__count"
      >
        <span>
          +
          10
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`PropertyRow renders selection mode 1`] = `
<div
  className="panel panel--default property-row property-row--selection-mode"
>
  <div
    className="property-row__selector"
    onClick={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    <div
      className="property-row__image"
      style={
        Object {
          "backgroundImage": "url(\\"https://i.imgur.com/UEH4gfU.jpg\\")",
        }
      }
    />
    <div
      className="property-row__selector-hover"
    />
    <div
      className="property-row__tick"
    />
  </div>
  <div
    className="property-row__name"
  >
    Meridian SLC
  </div>
  <div
    className="property-row__address"
  >
    123 4th Avenue, Seattle WA 98106
  </div>
  <div
    className="property-row__link-container"
  >
    <a
      className="property-row__link"
      href="https://app.remarkably.io/projects/pro_nqcu73oiinomuvn7/baseline/"
    >
      View Property
    </a>
  </div>
  <div
    className="property-row__health"
  >
    <div
      className="property-status property-status--on-track"
    >
      ON TRACK
    </div>
  </div>
  <div
    className="property-row__members"
  >
    <div
      className="user-icon-list"
    >
      <div
        className="user-icon user-icon-list__icon"
        data-index={0}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        style={
          Object {
            "backgroundColor": "#006EFF",
            "zIndex": 4,
          }
        }
      >
        IK
        <div
          className="user-icon__avatar"
          style={
            Object {
              "backgroundImage": "url()",
            }
          }
        />
      </div>
      <div
        className="user-icon user-icon-list__icon"
        data-index={1}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        style={
          Object {
            "backgroundColor": "#6B29BE",
            "zIndex": 3,
          }
        }
      >
        PN
        <div
          className="user-icon__avatar"
          style={
            Object {
              "backgroundImage": "url(/avatar.jpg)",
            }
          }
        />
      </div>
      <div
        className="user-icon user-icon-list__icon"
        data-index={2}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        style={
          Object {
            "backgroundColor": "#006EFF",
            "zIndex": 2,
          }
        }
      >
        DC
        <div
          className="user-icon__avatar"
          style={
            Object {
              "backgroundImage": "url(https://robohash.org/architectoaccusantiumdolorem.jpg?size=50x50&set=set1&bgset=bg1)",
            }
          }
        />
      </div>
      <div
        className="user-icon user-icon-list__icon"
        data-index={3}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        style={
          Object {
            "backgroundColor": "#6B29BE",
            "zIndex": 1,
          }
        }
      >
        UA
        <div
          className="user-icon__avatar"
          style={
            Object {
              "backgroundImage": "url(https://robohash.org/estnecessitatibusporro.jpg?size=50x50&set=set1&bgset=bg1)",
            }
          }
        />
      </div>
      <div
        className="user-icon user-icon-list__icon"
        data-index={4}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        style={
          Object {
            "backgroundColor": "#006EFF",
            "zIndex": 0,
          }
        }
      >
        SC
        <div
          className="user-icon__avatar"
          style={
            Object {
              "backgroundImage": "url(https://robohash.org/esseconsequaturconsequatur.jpg?size=50x50&set=set1&bgset=bg1)",
            }
          }
        />
      </div>
      <div
        className="user-icon-list__count"
      >
        <span>
          +
          10
        </span>
      </div>
    </div>
  </div>
</div>
`;
